🔒 Security Audit: Critical fixes for production readiness
## Security Fixes
- Remove hardcoded demo JWT keys from docker-compose.yml
- Replace Kong consumer credentials with env vars
- Fix all select('*') queries with explicit column selection
- Remove @ts-ignore patterns with proper TypeScript types

## Payment System Overhaul
- Rewrite paymentsApi.ts from mock to real Edge Function integration
- Add secure payment method management via Edge Functions
- Implement proper Stripe payment intent flow

## Type System Improvements
- Add public_key field to database.types.ts for E2E encryption
- Create type declarations for react-native-mmkv
- Create type declarations for expo-image-manipulator
- Fix navigation typing across all services

## Code Quality
- Remove backup files (RequestsScreen.backup.tsx, GiftInboxScreen.backup.tsx)
- Fix video-service.ts with proper Supabase client handling
- Fix advanced-analytics.ts undefined object access
- Update Supabase config with proper documentation

## New Edge Functions
- Add audit-logging function for security events
- Add video-processing function for media handling

TypeScript: 0 errors ✅

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,16 @@ yarn-error.*
 coverage/
 .eslintcache
 apps/mobile/.eslintcache
+# ============================================
+# SECURITY: Environment files with secrets
+# ============================================
+# Docker environment with hardcoded keys (local dev only)
+.env.docker
+.env.docker.local
+
+# Supabase local config
+supabase/.temp/
+
+# Infisical local cache
+.infisical/
+.infisical.json
