--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -18,6 +18,21 @@ EXPO_PUBLIC_API_URL=https://xxxxx.supabase.co/functions/v1
 EXPO_PUBLIC_SENTRY_DSN=https://xxxxx@xxxxx.ingest.sentry.io/xxxxx
 EXPO_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
 
+# Cache Encryption (generate with: openssl rand -base64 32)
+EXPO_PUBLIC_CACHE_ENCRYPTION_KEY=your-random-32-char-encryption-key
+
+# ============================================
+# 🔐 INFISICAL - Secrets Management
+# ============================================
+# Infisical is used for managing all sensitive secrets.
+# Organization: travelmatch
+# Project ID: cafe77a6-a1d6-4725-89d4-e1ec88c0f2b9
+#
+# Client credentials (Machine Identity for SDK access):
+INFISICAL_CLIENT_ID=your-machine-identity-client-id
+INFISICAL_CLIENT_SECRET=your-machine-identity-client-secret
+INFISICAL_PROJECT_ID=cafe77a6-a1d6-4725-89d4-e1ec88c0f2b9
+
 # ============================================
 # ⚠️ REMOVED - Moved to Server-Side
 # ============================================
@@ -30,11 +45,11 @@ EXPO_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
 # See docs/EXPO_PUBLIC_SECURITY_AUDIT.md for migration guide
 
 # ============================================
-# 📝 Server-Side Only Variables
+# 📝 Server-Side Only Variables (in Infisical)
 # ============================================
-# These should be set in Supabase Dashboard → Project Settings → Edge Functions
-# NEVER prefix these with EXPO_PUBLIC_
+# These secrets are stored in Infisical and accessed via Edge Functions:
 #
+# - SUPABASE_SERVICE_ROLE_KEY (CRITICAL - never expose)
 # - STRIPE_SECRET_KEY=sk_live_xxxxx
 # - STRIPE_WEBHOOK_SECRET=whsec_xxxxx
 # - GOOGLE_MAPS_SERVER_KEY=AIzaSy...
@@ -42,4 +57,5 @@ EXPO_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
 # - UPSTASH_REDIS_REST_TOKEN=...
 # - OPENAI_API_KEY=sk-...
 # - CLOUDFLARE_STREAM_API_KEY=...
+# - CLOUDFLARE_STREAM_ACCOUNT_ID=...
 
