--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^5.2.2",
+    "@infisical/sdk": "^4.0.6",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
@@ -48,6 +49,7 @@
     "expo": "~54.0.0",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.0",
+    "expo-crypto": "^15.0.8",
     "expo-device": "~6.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
