--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
   // TypeScript
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
+  // Ignore errors from node_modules (package internal configs)
+  "typescript.validate.enable": true,
 
   // ESLint
   "eslint.workingDirectories": [
@@ -18,12 +20,21 @@
     "./packages/shared"
   ],
 
-  // Files
+  // Files - exclude from search/watch
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
     "**/.turbo": true
+  },
+  
+  // Search - exclude node_modules from search
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/dist": true,
+    "**/build": true
   },
   
   // Python
