--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -22,40 +22,42 @@
     "validate": "pnpm run lint && pnpm run type-check && pnpm run test:ci && pnpm run test-storybook:ci"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "react": "^18.2.0",
-    "react-native": "0.73.2",
-    "react-native-svg": "^14.1.0",
-    "react-native-reanimated": "^3.6.0",
-    "react-native-gesture-handler": "^2.14.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.16.0",
+    "react-native-svg": "^15.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-native": "^0.73.0",
-    "typescript": "^5.3.3",
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "@testing-library/react-native": "^12.4.3",
-    "@testing-library/jest-native": "^5.4.3",
-    "@storybook/react": "^7.6.10",
+    "@storybook/addon-a11y": "^7.6.10",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
-    "@storybook/addon-a11y": "^7.6.10",
-    "@storybook/test-runner": "^0.16.0",
     "@storybook/jest": "^0.2.3",
+    "@storybook/react": "^7.6.10",
+    "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/react": "^18.2.0",
     "axe-playwright": "^2.0.0",
-    "playwright": "^1.40.0",
     "chromatic": "^10.2.0",
     "concurrently": "^8.2.2",
-    "wait-on": "^7.2.0",
-    "http-server": "^14.1.1"
+    "eslint": "^8.56.0",
+    "http-server": "^14.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "playwright": "^1.40.0",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.3.3",
+    "wait-on": "^7.2.0"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-native": ">=0.72.0"
+    "react-native": ">=0.74.0"
   },
   "publishConfig": {
     "access": "restricted"
