--- a/services/ml-service/Dockerfile
+++ b/services/ml-service/Dockerfile
@@ -1,5 +1,5 @@
-# Use Python 3.11 slim image
-FROM python:3.11-slim as base
+# Use Python 3.12 slim image (bookworm base has fewer CVEs)
+FROM python:3.12-slim-bookworm as base
 
 # Set working directory
 WORKDIR /app
