--- a/services/ml-service/requirements.txt
+++ b/services/ml-service/requirements.txt
@@ -31,7 +31,8 @@ prometheus-client==0.19.0
 python-dotenv==1.0.0
 httpx==0.26.0
 orjson==3.9.12
-requests==2.31.0
+requests==2.32.4
+urllib3==2.5.0
 
 # Development
 pytest==7.4.4
