--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,19 +10,19 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "16.0.8",
+    "@travelmatch/shared": "workspace:*",
+    "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "@travelmatch/shared": "workspace:*"
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.8",
+    "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
