--- a/services/ml/package.json
+++ b/services/ml/package.json
@@ -18,13 +18,13 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
     "@anthropic-ai/sdk": "^0.71.2",
+    "@supabase/supabase-js": "^2.39.0",
     "openai": "^6.10.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
-    "typescript": "^5.6.3",
-    "eslint": "^8.57.1"
+    "eslint": "^9.39.2",
+    "typescript": "^5.6.3"
   }
 }
