--- a/services/payment/package.json
+++ b/services/payment/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
-    "typescript": "^5.6.3",
-    "eslint": "^8.57.1"
+    "eslint": "^9.39.2",
+    "typescript": "^5.6.3"
   }
 }
