--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -47,7 +47,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "@rnmapbox/maps": "^10.2.10",
-    "@sentry/react-native": "~7.2.0",
+    "@sentry/react-native": "~7.8.0",
     "@shopify/flash-list": "^2.2.0",
     "@supabase/supabase-js": "^2.88.0",
     "@travelmatch/design-system": "workspace:*",
@@ -72,6 +72,7 @@
     "expo-notifications": "~0.32.15",
     "expo-screen-capture": "~8.0.9",
     "expo-secure-store": "~15.0.8",
+    "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.15",
@@ -100,7 +101,6 @@
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@eslint/js": "^9.39.2",
     "@storybook/react-native": "^10.1.1",
-    "storybook": "^10.1.10",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.14",
     "@types/pako": "^2.0.4",
@@ -124,6 +124,7 @@
     "lucide-react-native": "^0.561.0",
     "prettier": "^3.7.4",
     "react-test-renderer": "19.1.0",
+    "storybook": "^10.1.10",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.50.0"
