--- a/.github/workflows/deploy-supabase.yml
+++ b/.github/workflows/deploy-supabase.yml
@@ -49,13 +49,13 @@ jobs:
           node-version: '20'
 
       - name: 🔐 Import secrets from Infisical
-        uses: infisical/secrets-action@v1
+        uses: Infisical/secrets-action@v1.0.15
         with:
-          method: universal-auth
+          method: universal
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: fa0ed450-40e2-4063-b4f4-ce5cca83a57e
-          environment: ${{ github.ref_name == 'main' && 'production' || 'staging' }}
+          project-slug: travelmatch
+          env-slug: ${{ github.ref_name == 'main' && 'prod' || 'staging' }}
 
       - name: 📦 Install Supabase CLI
         run: |
