--- a/services/ml-service/requirements.txt
+++ b/services/ml-service/requirements.txt
@@ -27,10 +27,11 @@ scipy==1.15.1
 # ML Optimization & Inference
 onnxruntime==1.20.1
 
-# NLP & Transformers
-transformers==4.47.1
+# NLP & Transformers - Updated to fix security vulnerabilities
+# CVE fixes: ReDoS, Deserialization vulnerabilities
+transformers==4.57.6
 tokenizers==0.21.0
-sentence-transformers==3.3.1
+sentence-transformers==5.2.0
 
 # Computer Vision
 opencv-python-headless==4.10.0.84  # Headless = smaller, no GUI deps
